--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -17,6 +17,7 @@ a:visited {
 @import 'prototype/email';
 @import 'prototype/study-card';
 @import 'prototype/timeline';
+@import 'prototype/summary-card';
 ///////////////////////////////////////////
 // Add your custom CSS/Sass styles below...
 ///////////////////////////////////////////
