update organisations page content

--- a/app/views/see-how-data-is-shared/v1/contact-choices/your-preferences.html
+++ b/app/views/see-how-data-is-shared/v1/contact-choices/your-preferences.html
@@ -7,7 +7,7 @@
 
 {% set study  %}
   {% if data['study'] == 'text' %}
-    We'll contact you by text we share your data for a new study.
+    We'll contact you by text when we share your data for a new study.
   {% elif data['study'] == 'email' %}
     We'll contact you by email when we share your data for a new study.
   {% else %}
