--- a/app/views/see-how-data-is-shared/v1/organisations/1.html
+++ b/app/views/see-how-data-is-shared/v1/organisations/1.html
@@ -67,7 +67,7 @@
         </h1>
       </div>
 
-      <p>NHS Leeds Clinical Commissioning Group (CCG) is made up of 97 GP practices and we cover a population of around 870,000 people.</p>
+      <p>NHS Leeds Clinical Commissioning Group (CCG) is made up of 97 GP practices and covers a population of around 870,000 people.</p>
 
 
       <p>{{ study.organisationExplainer}}.</p>
