--- a/app/views/see-how-data-is-shared/v1/organisations/3.html
+++ b/app/views/see-how-data-is-shared/v1/organisations/3.html
@@ -14,7 +14,7 @@
     dateFinished: "",
     timesDataShared: "5",
     organisation: "Leeds City Council",
-    organisationExplainer: "A city council helps plan and fund health and social care services.",
+    organisationExplainer: "A city council helps plan and fund health and social care services",
     phrase: "understand"
 
   }
@@ -67,6 +67,8 @@
            {{ contentTitle }}
         </h1>
       </div>
+
+      <p>Leeds City Council is the local authority of the City of Leeds in West Yorkshire, England. It is a metropolitan district council, one of five in West Yorkshire and one of 36 in the metropolitan counties of England, and provides the majority of local government services in Leeds</p>
 
       <p>{{ study.organisationExplainer}}.</p>
 
