--- a/app/views/see-how-data-is-shared/v1/organisations/4.html
+++ b/app/views/see-how-data-is-shared/v1/organisations/4.html
@@ -14,7 +14,7 @@
     dateFinished: "",
     timesDataShared: "3",
     organisation: "University College London (UCL)",
-    organisationExplainer: "University College London (UCL) is a university. Universities provide the health and social care system with new treatments, cures for diseases and help plan services by doing research.",
+    organisationExplainer: "University College London (UCL) is a public research university located in London, United Kingdom. Universities provide the health and social care system with new treatments, cures for diseases and help plan services by doing research.",
     phrase: "understand"
 
   }
