--- a/app/views/see-how-data-is-shared/v1/studies/2.html
+++ b/app/views/see-how-data-is-shared/v1/studies/2.html
@@ -14,7 +14,7 @@
     dateFinished: "",
     timesDataShared: "5",
     organisation: "Methods Analytics Ltd",
-    organisationExplainer: "Methods Analytics Ltd is a private organisation working on behalf of the NHS",
+    organisationExplainer: "Methods Analytics Ltd is a private organisation that provides services to the NHS",
     phrase: "understand"
 
   }
