tailor second question

--- a/app/views/see-how-data-is-shared/v1/contact-choices/2-when.html
+++ b/app/views/see-how-data-is-shared/v1/contact-choices/2-when.html
@@ -1,6 +1,6 @@
 {% set PROTOTYPEURL = "see-how-data-is-shared/v1" %}
 {% set serviceName = "See how data from your health records has helped research and planning" %}
-{% set contentTitle = "How would you like us to contact you?" %}
+{% set contentTitle = "How would you like us to send your report?" %}
 {% set title = contentTitle + " - " + serviceName %}
 {% block pageScripts %}
 {% endblock %}
