--- a/app/views/register-as-a-data-donor/v3/register/unsure-ai.html
+++ b/app/views/register-as-a-data-donor/v3/register/unsure-ai.html
@@ -29,7 +29,7 @@
 <form action="/{{ PROTOTYPEURL }}/register/check-your-answers" method="post">
   {{ radios({
     "idPrefix": "nhs",
-    "name": "aiUnsure",
+    "name": "shareAI",
     "fieldset": {
       "legend": {
         "text": "Are you happy to share your data for artificial intelligence?",
