Updated visually hidden text on data donor v3

--- a/app/views/register-as-a-data-donor/v3/register/check-your-answers.html
+++ b/app/views/register-as-a-data-donor/v3/register/check-your-answers.html
@@ -61,7 +61,7 @@
                 {
                   href: "#",
                   text: "Change",
-                  visuallyHiddenText: "type"
+                  visuallyHiddenText: "the type of data you'd like to share"
                 }
               ]
             }
@@ -78,7 +78,7 @@
                 {
                   href: "#",
                   text: "Change",
-                  visuallyHiddenText: "research"
+                  visuallyHiddenText: "if you want to share your data for research to find cures and better treatments for illnesses "
                 }
               ]
             }
@@ -95,7 +95,7 @@
                 {
                   href: "#",
                   text: "Change",
-                  visuallyHiddenText: "planning"
+                  visuallyHiddenText: "if you want to share for planning where we need to improve or provide more health services"
                 }
               ]
             }
@@ -112,7 +112,7 @@
                 {
                   href: "#",
                   text: "Change",
-                  visuallyHiddenText: "artificial intelligence"
+                  visuallyHiddenText: "if you wan to share your data for artificial intelligence"
                 }
               ]
             }
